syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;
import "google/protobuf/empty.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetAll(google.protobuf.Empty) returns (PersonReply);
  rpc GetUser(UniqueID) returns (User);
  rpc GetAllUsers(google.protobuf.Empty) returns (ListOfUsers);
  rpc AddUser(User) returns (UniqueID);
  rpc WriteToKafka(User) returns (PersonReply);
  rpc ReadFromKafka(Kafka) returns (ListOfUsers);
  rpc AddRegion(Region) returns (UniqueID);
  rpc AddSignalToKafka(Signal) returns (google.protobuf.Empty);
}

message Signal {
	string TagName = 1;
	string TagValue = 2;
	string TagType = 3;
}

message UniqueID {
	int32 Id = 1;
}

message Kafka {
	string topicName = 1;
	bool success = 2;
	string msg = 3;
	int32 offset = 4;
	string key = 5;
}
message User {
	int32 userId = 1;
	string userName = 2;
	string password = 3;
	int32 age = 4;
}

message Region {
	int32 regionId = 1;
	int32 regionCode = 2;
	string regionName = 3;
}

message ListOfUsers{
	repeated User data = 1;
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message PersonReply {
  string message = 1;
}

message Empty {

}
